--- a/bookEx/static/base.css
+++ b/bookEx/static/base.css
@@ -33,18 +33,22 @@ body {
 
 /* Add a separator between items */
 .breadcrumb-item + .breadcrumb-item::before {
-    content: "->"; /* Use '>' as a separator */
+    content: "→"; /* Use '>' as a separator */
     padding: 0 8px; /* Add space around the separator */
     color: #ccc;   /* Separator color */
 }
 
 .breadcrumb-item a {
-    color: #6ea9f0; /* Link color */
+    color: white; /* Link color */
+    border: 2px solid black;
+    background-color: black;
+    padding: 7px 20px;
+    border-radius: 7px;
 }
 
 .breadcrumb-item a:hover {
-    text-decoration: underline;
     color: purple;
+    background-color: white;
 }
 
 /* Style for the current page (the one without a link) */
@@ -253,4 +257,9 @@ a[role=button]{
 .carousel-control-prev-icon{
     background-color: purple;
     border-radius: 50%;
+}
+
+textarea[id=comment]{
+    border: 2px solid purple;
+    border-radius: 7px;
 }
