--- a/bookEx/templates/registration/register.html
+++ b/bookEx/templates/registration/register.html
@@ -8,7 +8,7 @@
 {% endblock sidenav %}
 
 {% block content %}
-  <h1>User Registration</h1>
+  <h1 style="font-family:'Brush Script MT', cursive;" >User Registration</h1>
     <form action="" method="post">
       <table>
          {{ form.as_table }}
