--- a/bookEx/static/base.css
+++ b/bookEx/static/base.css
@@ -40,8 +40,8 @@ body {
 
 .breadcrumb-item a {
     color: white; /* Link color */
-    border: 2px solid black;
-    background-color: black;
+    border: 2px solid purple;
+    background-color: purple;
     padding: 7px 20px;
     border-radius: 7px;
 }
@@ -262,4 +262,12 @@ a[role=button]{
 textarea[id=comment]{
     border: 2px solid purple;
     border-radius: 7px;
+}
+
+/* div */
+
+div[class=col-md-8]{
+ background-color: white;
+ border-radius: 7px;
+
 }
