--- a/bookEx/templates/bookMng/displaybooks.html
+++ b/bookEx/templates/bookMng/displaybooks.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="text-center">
-    <h1 class="mb-4" style="font-family:'Brush Script MT', cursive;">📚 Explore Books</h1>
+    <h1 class="mb-4" style="font-family:Helvetica, Arial, sans-serif">📚 Explore Books</h1>
 
     <form method="get" action="{% url 'displaybooks' %}" class="mb-5 d-flex justify-content-center">
         <input type="text" name="q" value="{{ query }}" class="form-control me-2" placeholder="Search books...">
