--- a/bookEx/templates/bookMng/mybooks.html
+++ b/bookEx/templates/bookMng/mybooks.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="text-center">
-    <h1 class="mb-4" style="font-family:'Brush Script MT', cursive;">📚 My Books</h1>
+    <h1 class="mb-4" style="font-family:Helvetica, Arial, sans-serif">📚 My Books</h1>
 
     {% if owned_books %}
     <div class="row justify-content-center">
