--- a/bookEx/templates/bookMng/postbook.html
+++ b/bookEx/templates/bookMng/postbook.html
@@ -15,7 +15,7 @@
             </div>
         </div>
     {% else %}
-        <h2 class="mb-4" style="font-family:'Brush Script MT', cursive;" > Post A New Book</h2>
+        <h2 class="mb-4" style="font-family:Helvetica, Arial, sans-serif" > Post A New Book</h2>
         <div class="card shadow-sm">
             <div class="card-body">
                 <form action="" method="post" enctype="multipart/form-data" novalidate>
