--- a/bookEx/templates/registration/register_success.html
+++ b/bookEx/templates/registration/register_success.html
@@ -8,7 +8,7 @@
 {% endblock sidenav %}
 
 {% block content %}
-  <h1 style="font-family:'Brush Script MT', cursive;" >User Registration Success!</h1>
+  <h1 style="font-family:Helvetica, Arial, sans-serif" >User Registration Success!</h1>
   <p>
       To login <a href="{% url 'login' %}?next=/"> Click Here</a>
   </p>
